--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -12,3 +12,36 @@
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
+
+.month-amounts {
+    text-align: center;
+    .month-amount {
+        -moz-border-radius:3px;
+        -webkit-border-radius:3px;
+        border-radius:3px;
+        display: inline-block;
+        text-align: center;
+        margin: 10px 5px 0;
+        border: 1px solid #000;
+        p {
+            position: relative;
+            display: inline-block;
+            padding: 20px 0 50px 0;
+            min-width: 100px;
+            margin: 0;
+            font-weight: bold;
+            font-size: 20px;
+            span {
+                background: #ddd;
+                display: block;
+                position: absolute;
+                bottom: 0;
+                width: 100%;
+                height: 30px;
+                line-height: 30px;
+                font-weight: normal;
+                font-size: 15px;
+            }
+        }
+    }
+}
