--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -16,13 +16,14 @@
 .month-amounts {
     text-align: center;
     .month-amount {
-        -moz-border-radius:3px;
-        -webkit-border-radius:3px;
-        border-radius:3px;
+        -moz-border-radius:5px;
+        -webkit-border-radius:5px;
+        border-radius:5px;
         display: inline-block;
         text-align: center;
         margin: 10px 5px 0;
-        border: 1px solid #000;
+        border: 1px solid #999;
+        overflow: hidden;
         p {
             position: relative;
             display: inline-block;
