--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -11,6 +11,9 @@
 .navbar-laravel {
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
+  .navbar-brand {
+    margin: 0 auto;
+  }
 }
 
 .month-amounts {
