--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -98,10 +98,18 @@
     }
 }
 
-canvas {
+.price-graph {
     display: block;
     max-width: 1200px;
     width: 95% !important;
-    height: 600px;
     margin: 20px auto;
+    position: relative;
+}
+
+.progress {
+    position: absolute;
+    left: 0;
+    top: 52px;
+    width: 100%;
+    height: 3px;
 }
