Pointer on logout button

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -88,6 +88,7 @@
 
 .log-out {
     .logout {
+        cursor: pointer;
         border-radius: 5px;
         border-collapse: collapse;
         border: none;
