--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -9,11 +9,21 @@
 @import '~bootstrap/scss/bootstrap';
 
 .navbar-laravel {
-  background-color: #fff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
-  .navbar-brand {
-    margin: 0 auto;
-  }
+    .container {
+        align-items: center;
+        justify-content: center;
+    }
+    h1 {
+        margin: 0;
+        padding: 0;
+        font-size: inherit;
+        line-height: inherit;
+    }
+    background-color: #fff;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
+    .navbar-brand {
+        margin: 0 auto;
+    }
 }
 
 .month-amounts {
@@ -70,23 +80,33 @@
     }
 }
 
-.auth-button {
-    -moz-border-radius:5px;
-    -webkit-border-radius:5px;
-    border-radius: 5px;
-    display: block;
-    margin: 80px auto;
-    background-color: #fd3a4a;
-    color: #fff;
-    font-size: 20px;
-    padding: 10px;
-    width: 230px;
-    text-align: center;
-    font-weight: bold;
-    &:hover {
+.guest-container {
+    margin-top: 80px;
+    margin-bottom: 80px;
+    p {
+        max-width: 400px;
+        width: 95%;
+        margin: 0 auto;
+        text-align: center;
+    }
+    .auth-button {
+        -moz-border-radius:5px;
+        -webkit-border-radius:5px;
+        border-radius: 5px;
+        display: block;
+        margin: 0 auto 50px;
+        background-color: #fd3a4a;
         color: #fff;
-        background-color: #fd6874;
-        text-decoration: none;
+        font-size: 20px;
+        padding: 10px;
+        width: 230px;
+        text-align: center;
+        font-weight: bold;
+        &:hover {
+            color: #fff;
+            background-color: #fd6874;
+            text-decoration: none;
+        }
     }
 }
 
@@ -122,6 +142,9 @@
         margin-bottom: 5px;
         font-size: 13px;
         line-height: 13px;
+    }
+    a {
+        color: #82b3da;
     }
 }
 
