--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -99,7 +99,8 @@
         color: #fff;
         font-size: 20px;
         padding: 10px;
-        width: 230px;
+        max-width: 230px;
+        width: 95%;
         text-align: center;
         font-weight: bold;
         &:hover {
